# TTac

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO  encoding.md  justfile  run.sh  tmux.sh
.github/workflows/: raylib.yaml  test.yaml  web.yaml
example/: CMakeLists.txt  raylib.cpp
graph/: control_flow.dot  watch.sh
include/: ttac.h
src/: ttac.c
tests/: different.cpp  macros.cpp  opposite.cpp  same.cpp  test.hpp  type.cpp
web/: index.html
